test/type_errors/expected_compile.txt
===== ppx_eta_error_nominal.ml =====
File "cases/ppx_eta_error_nominal.ml", line 1, characters 5-8:
1 | type err = Unavailable [@@deriving eta_error]
         ^^^
Error: eta_error: type err is not a closed polymorphic-variant alias;
       [@@deriving eta_error] supports type err = [ `Tag ... ]; rewrite the
       type as a closed polymorphic variant or write pp_err manually
exit=2
===== ppx_eta_error_unsupported_payload.ml =====
File "cases/ppx_eta_error_unsupported_payload.ml", line 3, characters 24-31:
3 | type err = [ `Custom of payload ] [@@deriving eta_error]
                            ^^^^^^^
Error: eta_error: payload of tag `Custom in type err is unsupported;
       supported built-ins are string, int, int64, float, and bool; add
       [@eta.render My_type.pp] to this tag or write pp_err manually
exit=2
===== ppx_result_nonstring.ml =====
File "cases/ppx_result_nonstring.ml", line 1, characters 21-32:
1 | let x = [%eta.result name (Ok 1)]
                         ^^^^^^^^^^^
Error: expected [%eta.result "name" body]
exit=2
===== ppx_result_wrong_arity.ml =====
File "cases/ppx_result_wrong_arity.ml", line 1, characters 21-30:
1 | let x = [%eta.result "db.find"]
                         ^^^^^^^^^
Error: expected [%eta.result "name" body]
exit=2
===== ppx_sync_nonstring.ml =====
File "cases/ppx_sync_nonstring.ml", line 1, characters 19-22:
1 | let x = [%eta.sync 123]
                       ^^^
Error: expected [%eta.sync "name" body]
exit=2
===== sql_attr_payload.ml =====
File "cases/sql_attr_payload.ml", line 1, characters 37-56:
1 | [%%eta.sql.table type t = { id : int [@primary_key true] }]
                                         ^^^^^^^^^^^^^^^^^^^
Error: attribute primary_key does not take a payload
exit=2
===== sql_bad_shape.ml =====
File "cases/sql_bad_shape.ml", line 1, characters 0-27:
1 | [%%eta.sql.table let x = 1]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: expected [%%eta.sql.table type users = { id : int; name : string }]
exit=2
===== sql_badfield.ml =====
File "cases/sql_badfield.ml", line 1, characters 35-46:
1 | [%%eta.sql.table type t = { tags : string list }]
                                       ^^^^^^^^^^^
Error: eta.sql.table supports int, int64, string, bool, float, bytes, and
       option fields
exit=2
===== sql_nine_fields.ml =====
File "cases/sql_nine_fields.ml", line 1, characters 0-110:
1 | [%%eta.sql.table type t = { a : int; b : int; c : int; d : int; e : int; f : int; g : int; h : int; i : int }]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: eta.sql.table all projection supports at most 8 fields
exit=2
===== sql_nonrecord.ml =====
File "cases/sql_nonrecord.ml", line 1, characters 22-23:
1 | [%%eta.sql.table type t = int]
                          ^
Error: eta.sql.table expects a record type declaration
exit=2
===== sql_unknown_attr.ml =====
File "cases/sql_unknown_attr.ml", line 1, characters 37-45:
1 | [%%eta.sql.table type t = { id : int [@bogus] }]
                                         ^^^^^^^^
Error: unsupported eta.sql.table column attribute: bogus
exit=2
===== supervisor_escape_type_s.ml =====
File "cases/supervisor_escape_type_s.ml", lines 10-13, characters 6-19:
10 | ......fun (type s) (sup : (s, error) Supervisor.t) ->
11 |         let open Supervisor.Scope in
12 |         let* child = start sup (lift (Effect.pure 42)) in
13 |         pure child;
Error: This field value has type
         "('s, error) Eta.Supervisor.t ->
         ('s, ('s, error, int) Eta.Supervisor.child, error)
         Eta.Supervisor.Scope.t"
       which is less general than
         "'s0.
           ('s0, 'a) Eta.Supervisor.t -> ('s0, 'b, 'a) Eta.Supervisor.Scope.t"
exit=2
===== supervisor_ref_leak.ml =====
File "cases/supervisor_ref_leak.ml", lines 9-13, characters 6-16:
 9 | ......fun sup ->
10 |         let open Supervisor.Scope in
11 |         let* child = start sup (lift (Effect.pure 42)) in
12 |         stolen := Some child;
13 |         pure ();
Error: This field value has type
         "('a, 'b) Eta.Supervisor.t -> ('a, unit, 'b) Eta.Supervisor.Scope.t"
       which is less general than
         "'s. ('s, 'c) Eta.Supervisor.t -> ('s, 'd, 'c) Eta.Supervisor.Scope.t"
exit=2
===== supervisor_return.ml =====
File "cases/supervisor_return.ml", lines 7-10, characters 6-19:
 7 | ......fun sup ->
 8 |         let open Supervisor.Scope in
 9 |         let* child = start sup (lift (Effect.pure 42)) in
10 |         pure child;
Error: This field value has type
         "('a, 'b) Eta.Supervisor.t ->
         ('a, ('a, 'b, int) Eta.Supervisor.child, 'b) Eta.Supervisor.Scope.t"
       which is less general than
         "'s. ('s, 'c) Eta.Supervisor.t -> ('s, 'd, 'c) Eta.Supervisor.Scope.t"
exit=2
